crates/cypher-plan/tests/snapshots/corpus__corpus_json_expr_case_and_isnull.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "input": 0,
      "items": [
        {
          "alias": "tier_level",
          "expr": {
            "arms": [
              [
                {
                  "kind": "str",
                  "value": "gold"
                },
                {
                  "kind": "int",
                  "value": 3
                }
              ],
              [
                {
                  "kind": "str",
                  "value": "silver"
                },
                {
                  "kind": "int",
                  "value": 2
                }
              ]
            ],
            "kind": "case",
            "otherwise": {
              "kind": "int",
              "value": 1
            },
            "scrutinee": {
              "kind": "prop",
              "prop": "tier",
              "target": {
                "id": 0,
                "kind": "var"
              }
            }
          }
        },
        {
          "alias": "no_email",
          "expr": {
            "kind": "is_null",
            "negated": false,
            "operand": {
              "kind": "prop",
              "prop": "email",
              "target": {
                "id": 0,
                "kind": "var"
              }
            }
          }
        }
      ],
      "op": "project"
    }
  ],
  "var_map": [],
  "write_ops": []
}
