crates/cypher-plan/tests/snapshots/corpus__corpus_json_full_delete_detach.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "bind": 0,
      "label": [
        "Person"
      ],
      "op": "source"
    },
    {
      "input": 0,
      "op": "filter",
      "predicate": {
        "bin_op": "eq",
        "kind": "bin_op",
        "lhs": {
          "kind": "prop",
          "prop": "id",
          "target": {
            "id": 0,
            "kind": "var"
          }
        },
        "rhs": {
          "kind": "param",
          "name": "targetId"
        }
      }
    }
  ],
  "var_map": [],
  "write_ops": [
    {
      "detach": true,
      "op": "delete",
      "targets": [
        {
          "id": 0,
          "kind": "var"
        }
      ]
    }
  ]
}
