crates/cypher-plan/tests/snapshots/corpus__corpus_json_varlen_expand.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: "serde_json::to_value(&plan).unwrap()"
---
{
  "ops": [
    {
      "bind": 0,
      "label": [
        "Person"
      ],
      "op": "source"
    },
    {
      "bind_rel": 1,
      "bind_to": 2,
      "from": 0,
      "input": 0,
      "op": "expand",
      "rel": {
        "direction": "undirected",
        "length": {
          "kind": "variable",
          "max": 5,
          "min": 1
        },
        "types": [
          "KNOWS"
        ]
      },
      "to": {
        "labels": [
          "Person"
        ]
      }
    },
    {
      "input": 1,
      "items": [
        {
          "alias": "start",
          "expr": {
            "id": 0,
            "kind": "var"
          }
        },
        {
          "alias": "end",
          "expr": {
            "id": 2,
            "kind": "var"
          }
        }
      ],
      "op": "project"
    }
  ],
  "var_map": [],
  "write_ops": []
}
