crates/cypher-plan/tests/snapshots/corpus__corpus_pretty_agg_count_distinct.snap
---
source: crates/cypher-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS cities]
  Aggregate keys=[] aggs=[count(DISTINCT $0.city)]
    Source (AS $0)
